--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;700&display=swap');
 @import "./custom";
 
 @import "~bootstrap/scss/bootstrap";
+@import "./common";
