--- a/assets/sass/_custom.scss
+++ b/assets/sass/_custom.scss
@@ -7,7 +7,7 @@
 // $warning: $yellow !default;
 // $danger: $red !default;
 // $light: #eeeeee;
-// $dark: #221816;
+$dark: #1e1e1e;
 
 /* font-size */
 $font-size-base: 1rem;
