--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -3,3 +3,59 @@ body {
   background-image: url("../images/bg_body.png");
   background-repeat: repeat;
 }
+
+h2,
+h3,
+h4,
+.h2,
+.h3,
+.h4 {
+  line-height: 1.8;
+  letter-spacing: 0.3em;
+}
+
+p {
+  line-height: 2;
+  letter-spacing: 0.3em;
+}
+
+.sec {
+  z-index: 1;
+  padding: 6rem 0;
+
+  .container {
+    z-index: 1;
+  }
+}
+
+.text-vertical {
+  -webkit-writing-mode: vertical-rl;
+  -ms-writing-mode: tb-rl;
+  writing-mode: vertical-rl;
+}
+
+.btn-dark {
+  border-radius: 0;
+  padding: 0.75rem 1.5rem;
+  letter-spacing: 0.3em;
+
+  &::after {
+    content: "";
+    display: inline-block;
+    vertical-align: middle;
+    width: 3rem;
+    height: 1px;
+    background-color: $white;
+    margin-top: -1px;
+    margin-left: 1rem;
+  }
+
+  &:hover {
+    background-color: $white;
+    color: $dark;
+
+    &::after {
+      background-color: $dark;
+    }
+  }
+}
