--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;700&display=swap');
-@import "./custom";
 
+@import "./custom";
 @import "~bootstrap/scss/bootstrap";
+@import "~slick-carousel/slick/slick";
+@import "~slick-carousel/slick/slick-theme";
+
 @import "./common";
+@import "./component";
