--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -19,6 +19,20 @@ p {
   letter-spacing: 0.3em;
 }
 
+#app {
+  display: none;
+}
+
+#loader {
+  z-index: 999;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  background-color: #f7f7f7;
+}
+
 .sec {
   z-index: 1;
   padding: 6rem 0;
