--- a/assets/sass/components/_home.scss
+++ b/assets/sass/components/_home.scss
@@ -87,3 +87,35 @@
     right: -100px;
   }
 }
+
+.news {
+  margin: 0;
+  padding: 0;
+
+  li {
+    list-style: none;
+    box-sizing: border-box;
+    margin-bottom: 2em;
+
+    p {
+      font-size: $font-size-sm;
+      margin-bottom: 0.5em;
+      letter-spacing: normal;
+
+      span {
+        color: #717171;
+      }
+    }
+
+    h4 {
+      font-size: $font-size-base;
+    }
+  }
+}
+
+#home-news {
+  .bg-illust {
+    top: -50px;
+    right: -50px;
+  }
+}
