--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;700&display=swap');
+@import "~jquery-drawer/scss/drawer.scss";
 
 @import "./custom";
 @import "~bootstrap/scss/bootstrap";
