--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -1,3 +1,9 @@
+html {
+  @include media-breakpoint-down(md) {
+    font-size: 85%;
+  }
+}
+
 body {
   font-family: "Noto Serif JP", serif;
   background-image: url("../images/bg_body.png");
@@ -36,6 +42,9 @@ p {
 .sec {
   z-index: 1;
   padding: 6rem 0;
+  @include media-breakpoint-down(md) {
+    padding: 4rem 0;
+  }
 
   .container {
     z-index: 1;
@@ -52,6 +61,11 @@ p {
   border-radius: 0;
   padding: 0.75rem 1.5rem;
   letter-spacing: 0.3em;
+  @include media-breakpoint-down(md) {
+    text-align: left;
+    width: 90%;
+    margin: 0 auto;
+  }
 
   &::after {
     content: "";
