--- a/assets/sass/components/_footer.scss
+++ b/assets/sass/components/_footer.scss
@@ -8,5 +8,25 @@
   .tel {
     font-size: 2.2rem;
     letter-spacing: 0.2em;
+    @include media-breakpoint-down(md) {
+      display: block;
+      box-sizing: border-box;
+      border: solid 1px #e5e5e5;
+      font-size: 1.6rem;
+      padding: 1rem;
+
+      &::after {
+        content: "タップで電話";
+        display: block;
+        font-size: 0.875rem;
+      }
+    }
+  }
+
+  .foot-read {
+    @include media-breakpoint-down(md) {
+      font-size: 1.3rem !important;
+      letter-spacing: 0.3em;
+    }
   }
 }
