--- a/assets/sass/components/_mv.scss
+++ b/assets/sass/components/_mv.scss
@@ -13,7 +13,7 @@
     font-size: $font-size-sm;
 
     &::after {
-      content: '';
+      content: "";
       position: absolute;
       right: 0;
       bottom: 50%;
@@ -21,6 +21,16 @@
       width: 3rem;
       height: 1px;
       background-color: $dark;
+    }
+  }
+}
+
+.slick-slide {
+  img {
+    @include media-breakpoint-down(md) {
+      width: 100%;
+      height: 450px;
+      object-fit: cover;
     }
   }
 }
