--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -8471,6 +8471,10 @@ a.text-dark:hover, a.text-dark:focus {
       color: black;
       opacity: 0.75; }
 
+@media (max-width: 991.98px) {
+  html {
+    font-size: 85%; } }
+
 body {
   font-family: "Noto Serif JP", serif;
   background-image: url("../images/bg_body.png");
@@ -8504,6 +8508,9 @@ p {
 .sec {
   z-index: 1;
   padding: 6rem 0; }
+  @media (max-width: 991.98px) {
+    .sec {
+      padding: 4rem 0; } }
   .sec .container {
     z-index: 1; }
 
@@ -8516,6 +8523,11 @@ p {
   border-radius: 0;
   padding: 0.75rem 1.5rem;
   letter-spacing: 0.3em; }
+  @media (max-width: 991.98px) {
+    .btn-dark {
+      text-align: left;
+      width: 90%;
+      margin: 0 auto; } }
   .btn-dark::after {
     content: "";
     display: inline-block;
@@ -8548,19 +8560,22 @@ p {
 .drawer--right .drawer-nav {
   right: -100%; }
 
+.drawer-hamburger-icon::before {
+  top: -8px; }
+
+.drawer-hamburger-icon::after {
+  top: 8px;
+  left: auto;
+  right: 0;
+  width: 75%; }
+
+.drawer-open .drawer-hamburger-icon::after {
+  width: 100%; }
+
 @media (min-width: 768px) {
   .drawer-hamburger {
     top: 50%;
     right: 2vw !important; }
-  .drawer-hamburger-icon::before {
-    top: -8px; }
-  .drawer-hamburger-icon::after {
-    top: 8px;
-    left: auto;
-    right: 0;
-    width: 75%; }
-  .drawer-open .drawer-hamburger-icon::after {
-    width: 100%; }
   .drawer-nav {
     display: flex;
     justify-content: center;
@@ -8591,6 +8606,10 @@ p {
         box-sizing: border-box;
         padding: 1rem; } }
 
+@media (max-width: 991.98px) {
+  .drawer-hamburger {
+    top: 4.5rem; } }
+
 #footer .bg-illust {
   z-index: -1;
   top: 0;
@@ -8599,6 +8618,22 @@ p {
 #footer .tel {
   font-size: 2.2rem;
   letter-spacing: 0.2em; }
+  @media (max-width: 991.98px) {
+    #footer .tel {
+      display: block;
+      box-sizing: border-box;
+      border: solid 1px #e5e5e5;
+      font-size: 1.6rem;
+      padding: 1rem; }
+      #footer .tel::after {
+        content: "タップで電話";
+        display: block;
+        font-size: 0.875rem; } }
+
+@media (max-width: 991.98px) {
+  #footer .foot-read {
+    font-size: 1.3rem !important;
+    letter-spacing: 0.3em; } }
 
 .home-mv {
   font-size: 0;
@@ -8613,7 +8648,7 @@ p {
     padding-right: 4rem;
     font-size: 0.875rem; }
     .home-mv .scroll-main::after {
-      content: '';
+      content: "";
       position: absolute;
       right: 0;
       bottom: 50%;
@@ -8621,6 +8656,12 @@ p {
       width: 3rem;
       height: 1px;
       background-color: #1e1e1e; }
+
+@media (max-width: 991.98px) {
+  .slick-slide img {
+    width: 100%;
+    height: 450px;
+    object-fit: cover; } }
 
 .vertical-area {
   position: relative; }
@@ -8632,6 +8673,17 @@ p {
     white-space: nowrap;
     letter-spacing: 0.3em;
     line-height: 2; }
+    @media (max-width: 991.98px) {
+      .vertical-area .text-vertical {
+        position: static;
+        top: auto;
+        left: auto;
+        transform: translate(0, 0);
+        margin: 0 auto; } }
+
+@media (max-width: 991.98px) {
+  .bg-illust {
+    display: none !important; } }
 
 #intoro .bg-illust {
   z-index: -1; }
@@ -8648,6 +8700,10 @@ p {
 #carousel-suppon {
   margin-top: 10rem;
   margin-bottom: -15rem; }
+  @media (max-width: 991.98px) {
+    #carousel-suppon {
+      margin-top: 0;
+      margin-bottom: -3rem; } }
 
 .carousel-indicators {
   bottom: -1.5rem;
@@ -8662,6 +8718,9 @@ p {
 
 #suppon {
   padding-top: 15rem; }
+  @media (max-width: 991.98px) {
+    #suppon {
+      padding-top: 5rem; } }
 
 #menu-shop .bg-illust {
   z-index: -1; }
@@ -8704,4 +8763,8 @@ p {
 #home-news .bg-illust {
   top: -50px;
   right: -50px; }
+
+@media (max-width: 991.98px) {
+  .vertical-area.h-100 {
+    height: auto !important; } }
 
