--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -8519,7 +8519,14 @@ p {
   -ms-writing-mode: tb-rl;
   writing-mode: vertical-rl; }
 
+@media (max-width: 991.98px) {
+  .text-md-vertical {
+    -webkit-writing-mode: unset !important;
+    -ms-writing-mode: unset !important;
+    writing-mode: unset !important; } }
+
 .btn-dark {
+  position: relative;
   border-radius: 0;
   padding: 0.75rem 1.5rem;
   letter-spacing: 0.3em; }
@@ -8537,11 +8544,40 @@ p {
     background-color: #fff;
     margin-top: -1px;
     margin-left: 1rem; }
+    @media (max-width: 991.98px) {
+      .btn-dark::after {
+        position: absolute;
+        top: 50%;
+        right: 1rem; } }
   .btn-dark:hover {
     background-color: #fff;
     color: #1e1e1e; }
     .btn-dark:hover::after {
       background-color: #1e1e1e; }
+
+.suv-mv {
+  margin-bottom: 5rem; }
+  .suv-mv h2 {
+    z-index: 1;
+    position: absolute;
+    right: 1em;
+    bottom: -2.5em;
+    display: inline-block;
+    margin: 0;
+    font-size: 2.6rem;
+    letter-spacing: 0.3em;
+    -webkit-writing-mode: vertical-rl;
+    -ms-writing-mode: tb-rl;
+    writing-mode: vertical-rl; }
+
+.table th,
+.table td {
+  letter-spacing: 0.2em;
+  line-height: 1.8;
+  vertical-align: middle; }
+
+.table th {
+  white-space: nowrap; }
 
 .main-header .container-fluid nav.position-absolute, .main-header .container-sm nav.position-absolute, .main-header .container-md nav.position-absolute, .main-header .container-lg nav.position-absolute, .main-header .container-xl nav.position-absolute {
   top: 0;
@@ -8608,7 +8644,39 @@ p {
 
 @media (max-width: 991.98px) {
   .drawer-hamburger {
-    top: 4.5rem; } }
+    top: 4.5rem; }
+  .drawer--right.drawer-open .drawer-hamburger {
+    top: 0;
+    right: 0; }
+  .drawer-nav {
+    box-sizing: border-box;
+    padding: 0 1rem; }
+    .drawer-nav .menu-right .menu-wrap {
+      margin-bottom: 3rem; }
+      .drawer-nav .menu-right .menu-wrap .text-vertical {
+        -webkit-writing-mode: unset;
+        -ms-writing-mode: unset;
+        writing-mode: unset; }
+      .drawer-nav .menu-right .menu-wrap .drawer-menu {
+        margin-top: 4rem; }
+        .drawer-nav .menu-right .menu-wrap .drawer-menu li {
+          margin-bottom: 1.5rem; }
+          .drawer-nav .menu-right .menu-wrap .drawer-menu li a {
+            font-size: 1.2rem; }
+    .drawer-nav .menu-right .tel-wrap {
+      margin: 3rem auto; }
+      .drawer-nav .menu-right .tel-wrap .tel {
+        display: block;
+        box-sizing: border-box;
+        border: solid 1px #e5e5e5;
+        font-size: 1.6rem;
+        padding: 1rem; }
+        .drawer-nav .menu-right .tel-wrap .tel::after {
+          content: "タップで電話";
+          display: block;
+          font-size: 0.875rem; }
+    .drawer-nav .menu-right .sns a {
+      font-size: 1.2rem; } }
 
 #footer .bg-illust {
   z-index: -1;
@@ -8767,4 +8835,30 @@ p {
 @media (max-width: 991.98px) {
   .vertical-area.h-100 {
     height: auto !important; } }
+
+#creator,
+#shop-info {
+  background-color: #ededed;
+  width: 90%;
+  margin: 0 auto;
+  padding-top: 10rem; }
+  @media (max-width: 991.98px) {
+    #creator,
+    #shop-info {
+      width: 100%; } }
+
+.shop-main-img {
+  margin-bottom: -10rem; }
+
+.switch-img-thumbnail {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap; }
+  .switch-img-thumbnail img {
+    display: block;
+    width: 17%;
+    height: auto;
+    margin: 0 0.5% 1%;
+    cursor: pointer; }
 
