--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -57,7 +57,16 @@ p {
   writing-mode: vertical-rl;
 }
 
+@include media-breakpoint-down(md) {
+  .text-md-vertical {
+    -webkit-writing-mode: unset !important;
+    -ms-writing-mode: unset !important;
+    writing-mode: unset !important;
+  }
+}
+
 .btn-dark {
+  position: relative;
   border-radius: 0;
   padding: 0.75rem 1.5rem;
   letter-spacing: 0.3em;
@@ -76,6 +85,12 @@ p {
     background-color: $white;
     margin-top: -1px;
     margin-left: 1rem;
+
+    @include media-breakpoint-down(md) {
+      position: absolute;
+      top: 50%;
+      right: 1rem;
+    }
   }
 
   &:hover {
@@ -85,5 +100,35 @@ p {
     &::after {
       background-color: $dark;
     }
+  }
+}
+
+.suv-mv {
+  margin-bottom: 5rem;
+  h2 {
+    z-index: 1;
+    position: absolute;
+    right: 1em;
+    bottom: -2.5em;
+    display: inline-block;
+    margin: 0;
+    font-size: 2.6rem;
+    letter-spacing: 0.3em;
+    -webkit-writing-mode: vertical-rl;
+    -ms-writing-mode: tb-rl;
+    writing-mode: vertical-rl;
+  }
+}
+
+.table {
+  th,
+  td {
+    letter-spacing: 0.2em;
+    line-height: 1.8;
+    vertical-align: middle;
+  }
+
+  th {
+    white-space: nowrap;
   }
 }
