--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -8645,6 +8645,8 @@ p {
 @media (max-width: 991.98px) {
   .drawer-hamburger {
     top: 4.5rem; }
+    .drawer-hamburger.on-scroll {
+      top: 0; }
   .drawer--right.drawer-open .drawer-hamburger {
     top: 0;
     right: 0; }
@@ -8724,12 +8726,11 @@ p {
       width: 3rem;
       height: 1px;
       background-color: #1e1e1e; }
-
-@media (max-width: 991.98px) {
-  .slick-slide img {
-    width: 100%;
-    height: 450px;
-    object-fit: cover; } }
+  @media (max-width: 991.98px) {
+    .home-mv .slick-slide img {
+      width: 100%;
+      height: 450px;
+      object-fit: cover; } }
 
 .vertical-area {
   position: relative; }
@@ -8840,12 +8841,14 @@ p {
 #shop-info {
   background-color: #ededed;
   width: 90%;
-  margin: 0 auto;
-  padding-top: 10rem; }
+  margin: 0 auto; }
   @media (max-width: 991.98px) {
     #creator,
     #shop-info {
       width: 100%; } }
+
+#shop-info {
+  padding-top: 10rem; }
 
 .shop-main-img {
   margin-bottom: -10rem; }
@@ -8861,4 +8864,7 @@ p {
     height: auto;
     margin: 0 0.5% 1%;
     cursor: pointer; }
+    @media (max-width: 991.98px) {
+      .switch-img-thumbnail img {
+        width: 24%; } }
 
