--- a/assets/sass/_component.scss
+++ b/assets/sass/_component.scss
@@ -1,5 +1,9 @@
 @import './components/header';
 @import './components/footer';
+@import './components/sidebar';
 @import './components/mv';
 @import './components/home';
 @import './components/company';
+@import './components/menu';
+@import './components/posts';
+@import './components/single';
