--- a/assets/sass/components/_footer.scss
+++ b/assets/sass/components/_footer.scss
@@ -3,6 +3,10 @@
     z-index: -1;
     top: 0;
     left: -50px;
+    @include media-breakpoint-down(md) {
+      top: -1rem;
+      left: 2rem;
+    }
   }
 
   .tel {
