--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -3,6 +3,12 @@
     nav.position-absolute {
       top: 0;
       right: 3vw;
+
+      li {
+        a {
+          letter-spacing: 0.3em;
+        }
+      }
     }
   }
 }
