--- a/assets/sass/components/_home.scss
+++ b/assets/sass/components/_home.scss
@@ -21,7 +21,7 @@
 
 @include media-breakpoint-down(md) {
   .bg-illust {
-    display: none !important;
+    zoom: 0.5;
   }
 }
 
@@ -31,14 +31,25 @@
     &:nth-of-type(1) {
       top: -140px;
       right: -50px;
+      @include media-breakpoint-down(md) {
+        top: 35%;
+        right: -10px;
+      }
     }
     &:nth-of-type(2) {
       top: 30%;
       left: -10%;
+      @include media-breakpoint-down(md) {
+        top: 25%;
+        right: 5%;
+      }
     }
     &:nth-of-type(3) {
       bottom: -140px;
       right: -50px;
+      @include media-breakpoint-down(md) {
+        right: -10px;
+      }
     }
   }
 }
@@ -83,6 +94,10 @@
     &:nth-of-type(1) {
       top: 0;
       right: -80px;
+      @include media-breakpoint-down(md) {
+        top: 1rem;
+        right: -1rem;
+      }
     }
     &:nth-of-type(2) {
       top: 50%;
@@ -105,6 +120,9 @@
     z-index: -1;
     top: -150px;
     right: -100px;
+    @include media-breakpoint-down(md) {
+      right: 1rem;
+    }
   }
 }
 
@@ -137,6 +155,10 @@
   .bg-illust {
     top: -50px;
     right: -50px;
+    @include media-breakpoint-down(md) {
+      top: -1rem;
+      right: 2rem;
+    }
   }
 }
 
