--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -76,8 +76,14 @@
           transform: translate(-50%, -50%);
 
           li {
+            display: inline-block;
+            vertical-align: top;
             text-align: left;
             margin: 0 1rem;
+
+            a {
+              letter-spacing: 0.3em;
+            }
           }
         }
       }
@@ -132,6 +138,7 @@
             margin-bottom: 1.5rem;
             a {
               font-size: 1.2rem;
+              letter-spacing: 0.3em;
             }
           }
         }
