--- a/assets/sass/components/_home.scss
+++ b/assets/sass/components/_home.scss
@@ -59,7 +59,28 @@
   margin-bottom: -15rem;
   @include media-breakpoint-down(md) {
     margin-top: 0;
-    margin-bottom: -3rem;
+    margin-bottom: -7rem;
+  }
+
+  .carousel-item {
+    &::after {
+      @include media-breakpoint-down(md) {
+        content: "";
+        display: block;
+        padding-top: 56.25%;
+      }
+    }
+
+    img {
+      @include media-breakpoint-down(md) {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
   }
 }
 
@@ -84,7 +105,7 @@
 #suppon {
   padding-top: 15rem;
   @include media-breakpoint-down(md) {
-    padding-top: 5rem;
+    padding-top: 8rem;
   }
 }
 
