--- a/assets/sass/components/_single.scss
+++ b/assets/sass/components/_single.scss
@@ -40,13 +40,13 @@
   h4 {
     font-size: 1.1rem;
     &::before {
-      content: '';
+      content: "";
       display: inline-block;
       vertical-align: middle;
       width: 1em;
       height: 1px;
       background-color: $body-color;
-      margin-right: .5em;
+      margin-right: 0.5em;
     }
   }
 }
@@ -60,6 +60,11 @@
     background-color: $white;
     color: $body-color;
     padding: 1em;
+
+    &:hover {
+      background-color: $body-color;
+      color: $white;
+    }
 
     @include media-breakpoint-down(md) {
       font-size: 1.4rem;
