--- a/assets/sass/components/_home.scss
+++ b/assets/sass/components/_home.scss
@@ -107,9 +107,15 @@
   @include media-breakpoint-down(md) {
     padding-top: 8rem;
   }
+  @include media-breakpoint-up(md) {
+    padding-bottom: 5rem;
+  }
 }
 
 #menu-shop {
+  @include media-breakpoint-up(md) {
+    padding-top: 5rem;
+  }
   .bg-illust {
     z-index: -1;
     &:nth-of-type(1) {
