--- a/assets/sass/components/_mv.scss
+++ b/assets/sass/components/_mv.scss
@@ -24,13 +24,33 @@
     }
   }
 
-  .slick-slide {
-    img {
-      @include media-breakpoint-down(md) {
-        width: 100%;
-        height: 450px;
-        object-fit: cover;
+  .mv-slider {
+    .slick-slide {
+      img {
+        transition: all 10s;
+        transform: scale(1);
+        @include media-breakpoint-down(md) {
+          width: 100%;
+          height: 450px;
+          object-fit: cover;
+        }
+      }
+
+      &.slick-active {
+        img {
+          animation-name: scaleimg;
+          animation-duration: 15s;
+        }
       }
     }
+  }
+}
+
+@keyframes scaleimg {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.1);
   }
 }
