--- a/assets/sass/_common.scss
+++ b/assets/sass/_common.scss
@@ -69,7 +69,7 @@ button:focus {
   z-index: 1;
   padding: 6rem 0;
   @include media-breakpoint-down(md) {
-    padding: 4rem 0;
+    padding: 4.5rem 0;
   }
 
   .container {
@@ -135,7 +135,10 @@ button:focus {
 }
 
 .suv-mv {
-  margin-bottom: 5rem;
+  margin-bottom: 10rem;
+  @include media-breakpoint-down(md) {
+    margin-bottom: 5rem;
+  }
   h2 {
     z-index: 1;
     position: absolute;
@@ -157,9 +160,12 @@ button:focus {
     letter-spacing: 0.2em;
     line-height: 1.8;
     vertical-align: middle;
-    padding: 1em;
+    padding: 1.25rem;
     border-top: 0;
     border-bottom: 1px solid #dee2e6;
+    @include media-breakpoint-down(md) {
+      padding: 1em;
+    }
   }
 
   th {
