--- a/assets/sass/_custom.scss
+++ b/assets/sass/_custom.scss
@@ -8,6 +8,9 @@
 // $danger: $red !default;
 // $light: #eeeeee;
 $dark: #1e1e1e;
+$blue: #273b7c;
 
 /* font-size */
 $font-size-base: 1rem;
+
+$aos-distance: 0;
