--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -5,6 +5,7 @@
 @import "~bootstrap/scss/bootstrap";
 @import "~slick-carousel/slick/slick";
 @import "~slick-carousel/slick/slick-theme";
+@import "~aos/src/sass/aos.scss";
 
 @import "./common";
 @import "./component";
