--- a/assets/sass/components/_company.scss
+++ b/assets/sass/components/_company.scss
@@ -1,3 +1,9 @@
+#greeting {
+  @include media-breakpoint-up(md) {
+    padding-bottom: 9rem;
+  }
+}
+
 #creator,
 #shop-info {
   background-color: #ededed;
