--- a/assets/sass/components/_company.scss
+++ b/assets/sass/components/_company.scss
@@ -47,3 +47,54 @@
     margin: 2rem 0 5rem;
   }
 }
+
+.youtube-embed {
+  padding: 3rem 0 9rem;
+  @include media-breakpoint-down(md) {
+    padding: 1.5rem 0 4rem;
+  }
+  .youtube-embed-1 {
+    img {
+      z-index: 10;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      & + p {
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        left: 0;
+        width: 100%;
+        margin: 0;
+        transform: translateY(-50%);
+        color: $white;
+        z-index: 11;
+      }
+    }
+  }
+  .youtube-embed-2 {
+    img {
+      z-index: 10;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      & + p {
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        left: 0;
+        width: 100%;
+        margin: 0;
+        transform: translateY(-50%);
+        color: $white;
+        z-index: 11;
+      }
+    }
+  }
+}
