--- a/assets/sass/components/_footer.scss
+++ b/assets/sass/components/_footer.scss
@@ -34,3 +34,15 @@
     }
   }
 }
+
+.foot-logo {
+  a {
+    display: block;
+    img {
+      @include media-breakpoint-down(md) {
+        width: auto;
+        height: 80px;
+      }
+    }
+  }
+}
