--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -13,6 +13,22 @@
   }
 }
 
+.head-logo {
+  a {
+    display: block;
+    img {
+      @include media-breakpoint-down(md) {
+        width: auto;
+        height: 75px;
+      }
+    }
+  }
+}
+
+.modal-dialog {
+  top: 2rem;
+}
+
 .drawer-nav {
   width: 100%;
   background-image: url("../images/bg_body.png");
